# hutch-bunny

./: .dockerignore  .editorconfig  .env.bak  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  dev.compose.yml  dev.standalone.compose.yml  pyproject.toml
.github/workflows/: check.container-build.yml  check.quality.yml  check.run-tests.yml  release.dev.yml  release.versioned.yml
src/hutch_bunny/: __init__.py  cli.py  daemon.py
src/hutch_bunny/core/: constants.py  db.py  db_manager.py  entities.py  execute_query.py  logger.py  obfuscation.py  query_solvers.py  results_modifiers.py  setting_database.py  settings.py  task_api_client.py
src/hutch_bunny/core/rquest_dto/: activity_job.py  base_dto.py  cohort.py  file.py  group.py  query.py  result.py  rule.py
src/hutch_bunny/core/solvers/: availability_solver.py  query_solvers.py
src/hutch_bunny/core/upstream/: polling_service.py  task_api_client.py  task_handler.py
tests/: conftest.py  test_code_distribution_query.py  test_connection_pool.py  test_demographics_distribution_query.py  test_logging_env.py  test_obfuscation.py  test_return.py
tests/end_to_end/: test_cli_availability.py  test_cli_demographics.py  test_cli_distribution.py  test_cli_icd.py
tests/integration/: test_code_distribution_query.py  test_connection_pool.py  test_db_manager.py  test_demographics_distribution_query.py  test_return.py
tests/queries/: distribution.json
tests/queries/availability/: availability.json  basic_gender_or.json  multiple_in_group_and.json  multiple_in_group_or.json  multiple_in_group_or_with_age1.json  multiple_in_group_or_with_age2.json
tests/queries/distribution/: demographics.json  distribution.json  icd.json
tests/unit/: test_db_manager.py  test_logging_env.py  test_obfuscation.py  test_wake_azure_db.py
tests/unit/core/: test_settings.py
tests/unit/upstream/: test_polling_service.py  test_task_api_client.py  test_task_handler.py
tests/upstream/: test_polling_service.py  test_task_api_client.py  test_task_handler.py
