[project]
name = "hutch-bunny"
version = "1.0.0-alpha.6"
description = "A Cohort Discovery Task API worker"
license = { text = "MIT License" }
readme = "README.md"
authors = [
  { name = "Jon Couldridge", email = "jonathan.couldridge@nottingham.ac.uk" },
  { name = "Daniel Lea", email = "daniel.lea@nottingham.ac.uk" },
  { name = "Tri Thien Nguyen", email = "thien.nguyen1@nottingham.ac.uk" },
  { name = "James Mitchell-White", email = "james.mitchell-white1@nottingham.ac.uk" },
  { name = "Anwar Gaungoo", email = "anwar.gaungoo@nottingham.ac.uk" },
]
maintainers = [
  { name = "Jon Couldridge", email = "jonathan.couldridge@nottingham.ac.uk" },
]
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.2.1",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3", # daemon-only
  "sqlalchemy>=2.0.36",
  "trino>=0.331.0", # should become optional
  "pymssql>=2.3.2", # for SQL Server
  "pydantic-settings>=2.7.1",
]

[project.scripts]
bunny = "hutch_bunny.cli:main"
bunny-daemon = "hutch_bunny.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.6",
    "pytest>=8.3.4",
    "pandas-stubs>=2.2.3.241126",
    "mypy>=1.14.1",
    "types-requests>=2.32.0.20241016",
    "coverage>=7.6.12",
    "pytest-cov>=6.0.0",
]
